force-app/main/default/objects/Consumed_Capacity__c/Consumed_Capacity__c.object-meta.xml
<CustomObject>
    <label>Consumed Capacity</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Consumed Capacity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumed Capacity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>