force-app/main/default/objects/Consumed_Capacity__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF(ISPICKVAL(Type__c, &apos;Daily Capacity&apos;) &amp;&amp; !ISBLANK(Release_X_Hours_Before__c), NOW() + (Release_X_Hours_Before__c/24) &lt; DATETIMEVALUE(Capacity_Date__c),IF(ISPICKVAL(Type__c, &apos;Rule Based Capacity&apos;) &amp;&amp; !ISBLANK(Release_X_Hours_Before_Rule__c) ,NOW() + (Release_X_Hours_Before_Rule__c/24) &lt; DATETIMEVALUE(Capacity_Date__c),true))</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>