force-app/main/default/objects/Consumed_Capacity__c/fields/Capacity_Date__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Date__c</fullName>
    <label>Capacity Date</label>
    <type>Date</type>
</CustomField>