force-app/main/default/objects/Consumed_Capacity__c/fields/Capacity_Rule_Template__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Rule_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capacity Rule Template</label>
    <referenceTo>Capacity_Rule_Template__c</referenceTo>
    <relationshipLabel>Consumed Capacity</relationshipLabel>
    <relationshipName>Consumed_Capacity</relationshipName>
    <type>Lookup</type>
</CustomField>