force-app/main/default/objects/Consumed_Capacity__c/fields/Is_Daily_Capacity_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Daily_Capacity_Available__c</fullName>
    <formula>(Overall_Capacity__c * (Max__c)) &gt; Overall_Consumption__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Daily Capacity Available</label>
    <type>Checkbox</type>
</CustomField>