force-app/main/default/objects/Consumed_Capacity__c/fields/Is_Rule_Based_Capacity_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Rule_Based_Capacity_Available__c</fullName>
    <formula>AND(
Overall_Capacity_Rule__c &gt; Rule_Consumption__c,
Max_Rule__c &gt; 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Rule Based Capacity Available</label>
    <type>Checkbox</type>
</CustomField>