force-app/main/default/objects/Consumed_Capacity__c/fields/IsOverridden__c.field-meta.xml
<CustomField>
    <fullName>IsOverridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOverridden</label>
    <type>Checkbox</type>
</CustomField>