force-app/main/default/objects/Consumed_Capacity__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ServiceAppointment</fullName>
            </value>
            <value>
                <fullName>WorkOrder</fullName>
                <isActive>false</isActive>
                <label>WorkOrder</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>