force-app/main/default/objects/Consumed_Capacity__c/fields/Overall_Capacity_Hours__c.field-meta.xml
<CustomField>
    <fullName>Overall_Capacity_Hours__c</fullName>
    <formula>IF(NOT(ISBLANK(Overall_Capacity__c)),(Overall_Capacity__c/60),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Capacity (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>