force-app/main/default/objects/Consumed_Capacity__c/fields/Overall_Capacity_Rule__c.field-meta.xml
<CustomField>
    <fullName>Overall_Capacity_Rule__c</fullName>
    <label>Overall Capacity (Rule)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>