force-app/main/default/objects/Consumed_Capacity__c/fields/Overall_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Overall_Consumption__c</fullName>
    <label>Overall Consumption</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>