force-app/main/default/objects/Consumed_Capacity__c/fields/Parent_Consumed_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Consumed_Capacity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Consumed Capacity</label>
    <referenceTo>Consumed_Capacity__c</referenceTo>
    <relationshipLabel>Consumed Capacity</relationshipLabel>
    <relationshipName>Consumed_Capacity</relationshipName>
    <type>Lookup</type>
</CustomField>