force-app/main/default/objects/Consumed_Capacity__c/fields/Release_X_Hours_Before_Rule__c.field-meta.xml
<CustomField>
    <fullName>Release_X_Hours_Before_Rule__c</fullName>
    <label>Release X Hours Before (Rule)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>