force-app/main/default/objects/Consumed_Capacity__c/fields/Slots__c.field-meta.xml
<CustomField>
    <fullName>Slots__c</fullName>
    <label>Slots</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AvailableSlots</valueSetName>
    </valueSet>
</CustomField>