force-app/main/default/objects/Consumed_Capacity__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Work Type Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>