force-app/main/default/objects/Consumed_Capacity__c/recordTypes/Daily_Capacity.recordType-meta.xml
<RecordType>
    <fullName>Daily_Capacity</fullName>
    <active>true</active>
    <description>Create a Daily Consumed Capacity record</description>
    <label>Daily Capacity</label>
</RecordType>