force-app/main/default/objects/Consumed_Capacity__c/recordTypes/Rule_Based_Capacity.recordType-meta.xml
<RecordType>
    <fullName>Rule_Based_Capacity</fullName>
    <active>true</active>
    <description>Create a Rule Based Consumed Capacity record</description>
    <label>Rule Based Capacity</label>
</RecordType>