force-app/main/default/objects/Consumed_Capacity__c/listViews/Daily_Consumed_Capacities.listView-meta.xml
<ListView>
    <fullName>Daily_Consumed_Capacities</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Capacity_Date__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>Slots__c</columns>
    <columns>Is_Daily_Capacity_Available__c</columns>
    <columns>Max__c</columns>
    <columns>Overall_Capacity__c</columns>
    <columns>Overall_Capacity_Hours__c</columns>
    <columns>Overall_Consumption__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Consumed_Capacity__c.Daily_Capacity</value>
    </filters>
    <label>Daily Consumed Capacities</label>
</ListView>