force-app/main/default/objects/Consumed_Capacity__c/listViews/Rule_Based_Consumed_Capacities.listView-meta.xml
<ListView>
    <fullName>Rule_Based_Consumed_Capacities</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Capacity_Date__c</columns>
    <columns>Service_Territory__c</columns>
    <columns>Value__c</columns>
    <columns>Slots__c</columns>
    <columns>Is_Rule_Based_Capacity_Available__c</columns>
    <columns>Max_Rule__c</columns>
    <columns>Overall_Capacity_Rule__c</columns>
    <columns>Rule_Consumption__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Consumed_Capacity__c.Rule_Based_Capacity</value>
    </filters>
    <label>Rule Based Consumed Capacities</label>
</ListView>